# 3D-LiDAR-YOLOv8-obb

./: README.md
learned_lidar_detector/: package.xml  rviz.rviz  setup.cfg  setup.py
learned_lidar_detector/configs/: r02_s03_cam1South_lidarSouth_config.yaml
learned_lidar_detector/launch/: learned_lidar_detector.launch.py
learned_lidar_detector/learned_lidar_detector/: a9_dataset_creator.py  detection_node.py  kitti_dataset_creator.py  lidar_2_bev.py
learned_lidar_detector/learned_lidar_detector/configs/: a9_config.py  kitti_config.py
learned_lidar_detector/scripts/: DATASET.md  a9_bev.yaml  kitti_bev.yaml  kitti_eval_formatter.py  train_yolov8_obb.py
obj_tracker/: README.md  package.xml  setup.cfg  setup.py
obj_tracker/obj_tracker/: obj_tracker.py  obj_tracker_utils.py  sort_rotated_bbox.py  tracker_viz_node.py  tracks2csv.py
